--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: 17
-          distribution: adoptium
+          distribution: temurin
 
 
       # Step 3: Build your Spring Boot application (build the JAR)
