--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -24,15 +24,14 @@ jobs:
           java-version: 17
           distribution: temurin
 
-
       # Step 3: Build your Spring Boot application (build the JAR)
       - name: Build Spring Boot app
-        run: ./mvnw clean install -DskipTests
+        run: ./mvnw clean package -DskipTests
 
-      # Step 4: Build Docker image
+      # Step 4: Build Docker image (without cache)
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/spring-boot-docker:${{ github.sha }} .
+          docker build --no-cache -t ${{ secrets.DOCKER_USERNAME }}/spring-boot-docker:${{ github.sha }} .
 
       # Step 5: Log in to Docker Hub
       - name: Log in to Docker Hub
@@ -45,3 +44,9 @@ jobs:
       - name: Push Docker image
         run: |
           docker push ${{ secrets.DOCKER_USERNAME }}/spring-boot-docker:${{ github.sha }}
+
+      # Step 7: Tag as 'latest' and push (optional)
+      - name: Tag and push as latest
+        run: |
+          docker tag ${{ secrets.DOCKER_USERNAME }}/spring-boot-docker:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/spring-boot-docker:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/spring-boot-docker:latest
